--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.3"
   },
   "eslintConfig": {
     "root": true,
